--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "node": "6.2.1",
     "npm": "3.9.3"
   },
-    "scripts": {
+  "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "./node_modules/.bin/webpack"
   },
@@ -26,6 +26,7 @@
     "react-dom": "^15.4.1",
     "react-redux": "^5.0.1",
     "react-router": "^3.0.0",
+    "react-stars": "^2.1.0",
     "redux": "^3.6.0",
     "redux-thunk": "^2.1.0",
     "webpack": "^1.14.0"
